# cookiecutter-python

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .bumpversion.cfg  .editorconfig  .gitignore  .travis.yml  Makefile  Pipfile  README.rst  pyproject.toml  requirements_test.txt  setup.py  {{ 'tox.ini' if cookiecutter.use_tox == 'yes' else '' }}
{{cookiecutter.project_name}}/docs/source/: changelog.rst  conf.py  index.rst
{{cookiecutter.project_name}}/docs/source/topics/: introduction.rst
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: __init__.py
{{cookiecutter.project_name}}/tests/: __init__.py  test_package.py
